@@ -135,16 +135,16 @@ FromListSimple <- function(simpleList, nameName = "name", nodeName = NULL) {
 #' @param nameName The name that should be given to the name element
 #' @param childrenName The name that should be given to the children nested list
 #' @param rootName The name of the node. If provided, this overrides \code{Node$name}
-#' @param ... Additional parameters
+#' @param ... Additional parameters (ignored)
 #' 
 #' @examples
 #' data(acme)
 #' 
-#' str(ToListSimple(acme, "p", "cost"))
+#' str(ToListSimple(acme))
 #' 
-#' str(ToListExplicit(acme, "cost"))
-#' str(ToListExplicit(acme, "cost", unname = TRUE))
-#' str(ToListExplicit(acme, "cost", unname = TRUE, nameName = "id", childrenName = "descendants"))
+#' str(ToListExplicit(acme))
+#' str(ToListExplicit(acme, unname = TRUE))
+#' str(ToListExplicit(acme, unname = TRUE, nameName = "id", childrenName = "descendants"))
 #'
 #' 
 #' @export
@@ -192,8 +192,8 @@ as.list.Node <- function(x,
 #' @rdname as.list.Node
 #' 
 #' @export
-ToListSimple <- function(x, ..., nameName = "name") {
-  as.list.Node(x, mode = "simple", nameName = nameName, ...)
+ToListSimple <- function(x, nameName = "name") {
+  as.list.Node(x, mode = "simple", nameName = nameName)
 }
 
 
@@ -201,6 +201,6 @@ ToListSimple <- function(x, ..., nameName = "name") {
 #'  
 #'
 #' @export 
-ToListExplicit <- function(x, ..., unname = FALSE, nameName = ifelse(unname, "name", ""), childrenName = 'children') {
+ToListExplicit <- function(x, unname = FALSE, nameName = ifelse(unname, "name", ""), childrenName = 'children') {
   as.list.Node(x, mode = "explicit", unname = unname, nameName = nameName, childrenName = childrenName) 
 }
